rds-db2 connect

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-rdsdb2.tf.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-rdsdb2.tf.j2
@@ -10,7 +10,6 @@ locals {
   mas-saas-license-db2-json-{{RDS_APP}} = jsondecode(data.aws_secretsmanager_secret_version.mas-saas-license-db2-{{RDS_APP}}.secret_string)
   ibm_customer_id_{{RDS_APP}}           = local.mas-saas-license-db2-json-{{RDS_APP}}["ibm_customer_id"]
   ibm_site_id_{{RDS_APP}}               = local.mas-saas-license-db2-json-{{RDS_APP}}["ibm_site_id"]
-  secret_suffix_{{RDS_APP}}             = join("-", ["rds", var.instance_name, "{{RDS_APP}}"])
 }
 
 module "db2rds-{{RDS_APP}}" {
@@ -25,8 +24,8 @@ module "db2rds-{{RDS_APP}}" {
   username                            = "db2admin"
   subnet_grp_id_list                  = local.cluster.internal_subnet_ids
   db2_egress_subnet_ids               = local.cluster.external_subnet_ids
-  db2_ingress_subnet_ids              = local.cluster.internal_subnet_ids
-  db2_additional_ingress_cidrs        = local.cluster.cidrs.workload_internal
+  db2_ingress_subnet_ids              = local.cluster.external_subnet_ids
+  db2_additional_ingress_cidrs        = local.cluster.cidrs.workload_external
   db2_additional_egress_cidrs         = local.cluster.cidrs.workload_external
   db2_instance_class                  = "{{RDS_MANAGE_DB2_INSTANCE_CLASS}}"
   db2_storage_type                    = "gp3"
@@ -45,7 +44,8 @@ module "db2rds-{{RDS_APP}}" {
   backup_retention_period             = 30
   monitoring_interval                 = 30
   db2_preferred_backup_window         = "01:00-02:00"
-  db2_port                            = "50001"
+  db2_port                            = "50000"
+  db2_ssl_port                        = "50001"
   db2_parameters_file_path            = "./db2_parameters-{{RDS_APP}}.yaml"
   major_engine_version                = "11.5"
   s3_bucket_name_for_audit_log        = join("-", [var.cluster_name, var.instance_name, "rds", "auditlog", "{{RDS_APP}}"])
