Fixing phase4.yml.j2

--- a/tekton/src/pipelines/taskdefs/fvt-manage/phase4.yml.j2
+++ b/tekton/src/pipelines/taskdefs/fvt-manage/phase4.yml.j2
@@ -139,7 +139,7 @@
     - name: fvt_test_suite
       value: base-ui-scheduler-classic
   when:
-    - input: "scheduler"
+    - input: "base"
       operator: in
       values: ["$(tasks.fvt-component.results.component_names[*])"]
   runAfter:
