[patch] Support Opt-Out Metrics Reporting Flags in GitOps Automation (#1857)

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-mas-suite.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-mas-suite.yaml.j2
@@ -4,6 +4,9 @@ ibm_mas_suite:
   cert_manager_namespace: "{{ CERT_MANAGER_NAMESPACE }}"
   ibm_entitlement_key: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_IBM_ENTITLEMENT }}>"
   domain: "{{ DOMAIN }}"
+  mas_feature_usage: "{{ MAS_FEATURE_USAGE }}"
+  mas_deployment_progression: "{{ MAS_DEPLOYMENT_PROGRESSION }}"
+  mas_usability_metrics: "{{ MAS_USABILITY_METRICS }}"
 
 {%- if DNS_PROVIDER is defined and DNS_PROVIDER !='' %}
   # suite dns
