--- a/tekton/src/params/backup.yml.j2
+++ b/tekton/src/params/backup.yml.j2
@@ -75,6 +75,11 @@
   description: AWS region for S3 bucket
   default: ""
 
+- name: s3_endpoint_url
+  type: string
+  description: S3 endpoint url for S3 bucket
+  default: ""
+
 # Artifactory Upload Configuration
 # -----------------------------------------------------------------------------
 - name: artifactory_url
