--- a/tekton/src/pipelines/mas-backup.yml.j2
+++ b/tekton/src/pipelines/mas-backup.yml.j2
@@ -323,6 +323,8 @@ spec:
           value: $(params.s3_bucket_name)
         - name: s3_region
           value: $(params.s3_region)
+        - name: s3_endpoint_url
+          value: $(params.s3_endpoint_url)
 
         # Artifactory parameters
         - name: artifactory_username
