--- a/tekton/src/pipelines/taskdefs/dependencies/db2.yml.j2
+++ b/tekton/src/pipelines/taskdefs/dependencies/db2.yml.j2
@@ -52,6 +52,8 @@
       value: $(params.db2_4k_device_support)
     - name: db2_table_org
       value: $(params.db2_table_org)
+    - name: db2u_kind
+      value: $(params.db2u_kind)
 
     # Node Scheduling
     - name: db2_affinity_key
