--- a/tekton/src/pipelines/gitops/gitops-mas-initiator.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-mas-initiator.yml.j2
@@ -56,13 +56,16 @@ spec:
       type: string
     - name: mas_channel
       type: string
+      default: ""
     - name: mas_operationalmode
       type: string
       default: ""
     - name: mas_instance_id
       type: string
+      default: ""
     - name: aiservice_instance_id
       type: string
+      default: ""
     - name: mas_app_channel_assist
       type: string
       default: ""
