--- a/image/cli/masfvt/templates/mas-fvt-monitor.yml.j2
+++ b/image/cli/masfvt/templates/mas-fvt-monitor.yml.j2
@@ -44,6 +44,9 @@ spec:
     # Which FVT suite to run ('monitor_fvt' or 'monitor_fvt_with_manage')
     - name: fvt_test_suite
       value: "{{ fvt_test_suite }}"
+    # Product channel for version-specific test suite selection
+    - name: product_channel
+      value: "{{ mas_app_channel_monitor }}"
 
   workspaces:
     # The generated configuration files
