[patch] fetch the DEVOPS_ENVIRONMENT from mas-devops-slack

--- a/tekton/src/tasks/framework/update-pipeline-status.yml.j2
+++ b/tekton/src/tasks/framework/update-pipeline-status.yml.j2
@@ -38,7 +38,7 @@ spec:
         - name: DEVOPS_ENVIRONMENT
           valueFrom:
             secretKeyRef:
-              name: mas-devops
+              name: mas-devops-slack
               key: MAS_INSTANCE_ID
               optional: true
         - name: PIPELINE_STATUS
