--- a/image/cli/mascli/templates/gitops/bootstrap/root-application.yaml.j2
+++ b/image/cli/mascli/templates/gitops/bootstrap/root-application.yaml.j2
@@ -30,8 +30,8 @@ spec:
 
         auto_delete: {{ true if AUTO_DELETE=="true" else false }}
 
-        cluster_admin_role: true
-        application_admin_role: true
+        cluster_admin_role: {{ true if CLUSTER_ADMIN_ROLE=="true" else false }}
+        application_admin_role: {{ true if APPLICATION_ADMIN_ROLE=="true" else false }}
 
   syncPolicy:
     automated:
