--- a/tekton/src/pipelines/mas-restore.yml.j2
+++ b/tekton/src/pipelines/mas-restore.yml.j2
@@ -78,6 +78,14 @@ spec:
           value: $(params.backup_archive_name)
         - name: mas_instance_id
           value: $(params.mas_instance_id)
+        
+        # Archive specific
+        - name: include_sls_archive
+          value: $(params.include_sls)
+        - name: include_manage_db_archive
+          value: $(params.restore_manage_db)
+        - name: include_manage_app_archive
+          value: $(params.restore_manage_app)
 
         # S3 parameters
         - name: aws_access_key_id
@@ -395,16 +403,10 @@ spec:
           value: $(params.manage_db2_restore_vendor)
         - name: override_storageclass
           value: $(params.manage_db_override_storageclass)
-        - name: db2_meta_storage_class
-          value: $(params.manage_db_meta_storage_class)
-        - name: db2_data_storage_class
-          value: $(params.manage_db_data_storage_class)
-        - name: db2_backup_storage_class
-          value: $(params.manage_db_backup_storage_class)
-        - name: db2_logs_storage_class
-          value: $(params.manage_db_logs_storage_class)
-        - name: db2_temp_storage_class
-          value: $(params.manage_db_temp_storage_class)
+        - name: custom_storage_class_rwx
+          value: $(params.manage_db_storage_class_rwx)
+        - name: custom_storage_class_rwo
+          value: $(params.manage_db_storage_class_rwo)
 
       taskRef:
         kind: Task
