--- a/tekton/src/pipelines/mas-backup.yml.j2
+++ b/tekton/src/pipelines/mas-backup.yml.j2
@@ -236,6 +236,8 @@ spec:
           value: $(params.manage_db2_instance_name)
         - name: db2_action
           value: backup
+        - name: mas_application_id
+          value: manage
 
         # Backup specific parameters
         - name: db2_backup_version
