--- a/tekton/src/pipelines/mas-restore.yml.j2
+++ b/tekton/src/pipelines/mas-restore.yml.j2
@@ -395,6 +395,8 @@ spec:
 
         - name: db2_action
           value: restore
+        - name: mas_application_id
+          value: manage
 
         # restore specific parameters
         - name: db2_backup_version
