Added efs params in gitops-cluster

--- a/tekton/src/tasks/gitops/gitops-cluster.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-cluster.yml.j2
@@ -273,6 +273,14 @@ spec:
         value: $(params.instana_agent_operator_jks_storage_class)
       - name: HYPERVISOR
         value: $(params.hypervisor)
+      - name: EFS_CATALOG_SOURCE
+        value: $(params.efs_catalog_source)
+      - name: EFS_CATALOG_SOURCE_NAMESPACE
+        value: $(params.efs_catalog_source_namespace)
+      - name: EFS_CHANNEL
+        value: $(params.efs_channel)
+      - name: EFS_SUBSCRIPTION_SOURCE_NAMESPACE
+        value: $(params.efs_subscription_source_namespace)
 
     envFrom:
       - configMapRef:
