Updated gitops-cluster task

--- a/tekton/src/tasks/gitops/gitops-cluster.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-cluster.yml.j2
@@ -156,6 +156,18 @@ spec:
     - name: hypervisor
       type: string
       default: ''
+    - name: efs_catalog_source
+      type: string
+      default: ''
+    - name: efs_catalog_source_namespace
+      type: string
+      default: ''
+    - name: efs_channel
+      type: string
+      default: ''
+    - name: efs_subscription_source_namespace
+      type: string
+      default: ''
 
   stepTemplate:
     name: gitops-cluster
