--- a/tekton/src/pipelines/taskdefs/fvt-manage-is/phase2.yml.j2
+++ b/tekton/src/pipelines/taskdefs/fvt-manage-is/phase2.yml.j2
@@ -156,7 +156,7 @@
     - name: fvt_mas_appws_component
       value: aip
     - name: fvt_test_driver
-      value: tpae
+      value: graphite
   when:
     - input: "aip"
       operator: in
