Setting defaults in gitops-cluster

--- a/tekton/src/tasks/gitops/gitops-cluster.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-cluster.yml.j2
@@ -158,16 +158,16 @@ spec:
       default: ''
     - name: efs_catalog_source
       type: string
-      default: ''
+      default: 'redhat-operators'
     - name: efs_catalog_source_namespace
       type: string
-      default: ''
+      default: 'openshift-marketplace'
     - name: efs_channel
       type: string
-      default: ''
+      default: 'stable'
     - name: efs_subscription_source_namespace
       type: string
-      default: ''
+      default: 'openshift-cluster-csi-drivers'
 
   stepTemplate:
     name: gitops-cluster
