removed hypervisor from gitops-cluster task

--- a/tekton/src/tasks/gitops/gitops-cluster.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-cluster.yml.j2
@@ -350,8 +350,7 @@ spec:
         --github-org  $GITHUB_ORG \
         --github-repo $GITHUB_REPO \
         --git-branch $GIT_BRANCH \
-        --secrets-path $SECRET_PATH \
-        --hypervisor $HYPERVISOR
+        --secrets-path $SECRET_PATH
 
         exit $?
       command:
