--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/configs/ibm-mas-jdbc-config.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/configs/ibm-mas-jdbc-config.yaml.j2
@@ -9,7 +9,7 @@ use_postdelete_hooks: {{ USE_POSTDELETE_HOOKS }}
 
 jdbc_type: {{ JDBC_TYPE }}
 {% if JDBC_TYPE == "rds-db2" %}
-jdbc_instance_name: {{ SECRET_KEY_JDBC_INSTANCE_NAME }}
+jdbc_instance_name: {{ JDBC_INSTANCE_NAME }}
 {% else %}
 jdbc_instance_name: <path:{{ SECRETS_PATH }}:{{ SECRET_KEY_JDBC_INSTANCE_NAME }}>
 {% endif %}
