--- a/tekton/src/tasks/gitops/gitops-rds-db2-database.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-rds-db2-database.yml.j2
@@ -44,6 +44,13 @@ spec:
     - name: replica_db
       type: string
       default: "false"
+    - name: rds_db2_backup_manage
+      type: string
+    - name: rds_db2_backup_iot
+      type: string
+    - name: rds_db2_backup_facilities
+      type: string
+
   stepTemplate:
     name: gitops-rds-db2-database
     env:
@@ -83,6 +90,12 @@ spec:
         value: $(params.jdbc_connection_url_additional_params)
       - name: REPLICA_DB
         value: $(params.replica_db)
+      - name: RDS_DB2_BACKUP_MANAGE
+        value: $(params.rds_db2_backup_manage)
+      - name: RDS_DB2_BACKUP_IOT
+        value: $(params.rds_db2_backup_iot)
+      - name: RDS_DB2_BACKUP_FACILITIES
+        value: $(params.rds_db2_backup_facilities)
     envFrom:
       - configMapRef:
           name: environment-properties
@@ -116,3 +129,4 @@ spec:
   workspaces:
     - name: configs
     - name: shared-gitops-configs
+
