--- a/tekton/src/tasks/gitops/gitops-rds-db2-database.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-rds-db2-database.yml.j2
@@ -46,10 +46,13 @@ spec:
       default: "false"
     - name: rds_db2_backup_manage
       type: string
+      default: ""
     - name: rds_db2_backup_iot
       type: string
+      default: ""
     - name: rds_db2_backup_facilities
       type: string
+      default: ""
 
   stepTemplate:
     name: gitops-rds-db2-database
