add the default value for the routing mode

--- a/tekton/src/params/install.yml.j2
+++ b/tekton/src/params/install.yml.j2
@@ -450,7 +450,7 @@
   default: ""
 - name: mas_routing_mode
   type: string
-  default: ""
+  default: "subdomain"
 - name: mas_ingress_controller_name
   type: string
   default: ""
