--- a/tekton/src/tasks/suite-install.yml.j2
+++ b/tekton/src/tasks/suite-install.yml.j2
@@ -46,7 +46,7 @@ spec:
     - name: mas_routing_mode
       type: string
       description: Optional string parameter, either path or subdomain, defines the network routing mode used for the suite.
-      default: ""
+      default: "subdomain"
     - name: mas_ingress_controller_name
       type: string
       description: Name of the IngressController to use for path-based routing
