--- a/tekton/src/pipelines/gitops/gitops-mas-instance.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-mas-instance.yml.j2
@@ -267,7 +267,7 @@ spec:
     # routing parameters
     - name: mas_routing_mode
       type: string
-      default: ""
+      default: "subdomain"
     - name: mas_ingress_controller_name
       type: string
       default: ""
