--- a/tekton/src/tasks/gitops/gitops-suite.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-suite.yml.j2
@@ -59,7 +59,7 @@ spec:
       type: string
     - name: mas_routing_mode
       type: string
-      default: ""
+      default: "subdomain"
     - name: mas_ingress_controller_name
       type: string
       default: ""
